--- a/app/src/main/res/layout/listitem_content_info.xml
+++ b/app/src/main/res/layout/listitem_content_info.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/guest_layout"
-    android:layout_width="100dp"
     android:layout_height="50dp"
     android:background="@drawable/bg_item"
-    android:gravity="center"
     android:clickable="true"
+    android:focusable="true"
+    android:gravity="center"
+    android:layout_width="120dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/guest_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:textColor="@color/text_gray_666666"
         android:textSize="12sp" />
 
