--- a/app/src/main/res/layout/listitem_vertical_axis_info.xml
+++ b/app/src/main/res/layout/listitem_vertical_axis_info.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/room_type"
+        android:id="@+id/vertical_axis_type"
         android:textSize="12sp"
         android:textColor="@color/text_gray_666666"
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
 
 
     <TextView
-        android:id="@+id/room_name"
+        android:id="@+id/vertical_name"
         android:textSize="12sp"
         android:textColor="@color/text_gray_666666"
         android:layout_width="wrap_content"
