--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content">
 
         <com.thomas.excel.library.ExcelPanel
-            android:id="@+id/excelSpanel"
+            android:id="@+id/excelPanel"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
