--- a/app/src/main/res/layout/listitem_horizontal_axis_info.xml
+++ b/app/src/main/res/layout/listitem_horizontal_axis_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/horizontal_cotent"
     android:layout_width="120dp"
     android:layout_height="50dp"
     android:background="@drawable/bg_item"
@@ -7,11 +8,11 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/date"
-        android:textSize="12sp"
-        android:textColor="@color/text_gray_666666"
+        android:id="@+id/horizontal_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_gray_666666"
+        android:textSize="12sp" />
 
 
 </LinearLayout>
