--- a/app/src/main/res/layout/listitem_title.xml
+++ b/app/src/main/res/layout/listitem_title.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="名次"
-        android:textColor="#527ad8"
-        android:textSize="12sp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp" />
 
 </LinearLayout>
