--- a/app/src/main/res/layout/activity_common_excel_pannel.xml
+++ b/app/src/main/res/layout/activity_common_excel_pannel.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.thomas.excel.library.ExcelPanel
+        <com.thomas.excel.library.equalwidth.ExcelPanel
             android:id="@+id/excelPanel"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
