--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:padding="20dp"
+        android:textSize="16sp"
         android:textColor="@color/colorPrimary"
-        android:text="赛鸽成绩" />
+        android:text="赛鸽成绩（指定每列宽度）" />
 
     <TextView
         android:id="@+id/queryText"
@@ -19,7 +20,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:layout_margin="20dp"
+        android:textSize="16sp"
         android:padding="20dp"
-        android:text="指定查询" />
+        android:text="指定查询（等宽列）" />
 
 </LinearLayout>
