--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -32,51 +32,42 @@
 
             <LinearLayout
                 android:id="@+id/right_title_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <!--顶部标题-->
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_title_0"
-                        style="@style/text_row_title"
-                        android:layout_weight="1"
-                        android:text="内容"
-                        android:textSize="12sp" />
+                        style="@style/text_row_title" />
 
                     <TextView
                         android:id="@+id/tv_title_1"
                         style="@style/text_row_title_ring_weight"
-                        android:layout_weight="2"
                         />
 
                     <TextView
                         android:id="@+id/tv_title_2"
                         style="@style/text_row_title"
-                        android:layout_weight="1"
                         />
 
                     <TextView
                         android:id="@+id/tv_title_3"
                         style="@style/text_row_title"
-                        android:layout_weight="1"
                         />
 
                     <TextView
                         android:id="@+id/tv_title_4"
                         style="@style/text_row_title_time_weight"
-                        android:layout_weight="2"
                         />
 
                     <TextView
                         android:id="@+id/tv_title_5"
                         style="@style/text_row_title"
-                        android:layout_weight="1"
                         />
 
 
